[added] Support and tests for documents generated by Microsoft Word/Excel/PowerPoint

--- a/converter-libre-office/src/test/resources/document/ISO-8859-2/plain/complex_test.html
+++ b/converter-libre-office/src/test/resources/document/ISO-8859-2/plain/complex_test.html
@@ -60,10 +60,10 @@ div.WordSection1
 <p class="MsoNormal"><o:p>&nbsp;</o:p></p>
 <p class="MsoNormal"><o:p>&nbsp;</o:p></p>
 <p class="MsoNormal" style="text-autospace:none"><span lang="EN-US" style="font-size:12.0pt;color:black;mso-fareast-language:PL">Pozdrawiam,<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-autospace:none"><span style="font-size:12.0pt;color:black;mso-fareast-language:PL">Justyna Kurzynoga<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-autospace:none"><b><span style="font-size:10.0pt;color:black;mso-fareast-language:PL">Specjalista ds. Projektów<o:p></o:p></span></b></p>
+<p class="MsoNormal" style="text-autospace:none"><span style="font-size:12.0pt;color:black;mso-fareast-language:PL">Jurek Brzêczek<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-autospace:none"><b><span style="font-size:10.0pt;color:black;mso-fareast-language:PL">Specjalista ds. Niczego<o:p></o:p></span></b></p>
 <p class="MsoNormal" style="text-autospace:none"><span style="font-size:10.0pt;color:black;mso-fareast-language:PL"><o:p>&nbsp;</o:p></span></p>
-<p class="MsoNormal" style="text-autospace:none"><span style="font-size:9.0pt;color:black;mso-fareast-language:PL">T: &#43;48 42 200 7825</span><b><span style="font-size:10.0pt;color:black;mso-fareast-language:PL"><o:p></o:p></span></b></p>
+<p class="MsoNormal" style="text-autospace:none"><span style="font-size:9.0pt;color:black;mso-fareast-language:PL">T: &#43;45 233 323 2423</span><b><span style="font-size:10.0pt;color:black;mso-fareast-language:PL"><o:p></o:p></span></b></p>
 <p class="MsoNormal" style="text-autospace:none"><span style="font-size:9.0pt;color:black;mso-fareast-language:PL"><o:p>&nbsp;</o:p></span></p>
 <p class="MsoNormal" style="text-autospace:none"><span style="font-size:9.0pt;color:black;mso-fareast-language:PL"><img width="530" height="102" style="width:5.5208in;height:1.0625in" id="Obraz_x0020_1" src="cid:image001.png@01D4571C.421E4D90">
 <o:p></o:p></span></p>
